--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 Django==1.11
+boto==2.49.0
+boto3==1.9.86
+botocore==1.12.86
 dj-database-url==0.5.0
+django-storages==1.7.1
+docutils==0.14
+jmespath==0.9.3
 psycopg2==2.7.7
+python-dateutil==2.7.5
 pytz==2018.9
+s3transfer==0.1.13
 unicorn==1.0.1
+urllib3==1.24.1
