--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.11
+Pillow==5.4.1
 boto==2.49.0
 boto3==1.9.86
 botocore==1.12.86
 dj-database-url==0.5.0
+django-forms-bootstrap==3.1.0
 django-storages==1.7.1
 docutils==0.14
 jmespath==0.9.3
