--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.5.0
 django-forms-bootstrap==3.1.0
 django-storages==1.7.1
 docutils==0.14
+gunicorn==19.9.0
 jmespath==0.9.3
 psycopg2==2.7.7
 python-dateutil==2.7.5
