--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ docutils==0.14
 gunicorn==19.9.0
 jmespath==0.9.3
 psycopg2==2.7.7
+psycopg2-binary==2.7.7
 python-dateutil==2.7.5
 pytz==2018.9
 s3transfer==0.1.13
